feat(proxy options): add forward support

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
             <a href="http://localhost:3000/?host=https://github.com">http://localhost:3000/?host=https://github.com</a>
         </li>
         <li>
-            <a href="http://localhost:3000/?host=https://ru.wix.com">http://localhost:3000/?host=https://wix.com</a>
+            <a href="http://localhost:3000/?host=https://wix.com">http://localhost:3000/?host=https://wix.com</a>
         </li>
         <li>
-            <a href="http://localhost:3000/?host=https://slack.com/intl/en-ua/">http://localhost:3000/?host=https://slack.com</a>
+            <a href="http://localhost:3000/?host=https://slack.com">http://localhost:3000/?host=https://slack.com</a>
         </li>
         <li>
             <a href="http://localhost:3000/?host=https://medium.com">http://localhost:3000/?host=https://medium.com</a>
