--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Work links</h1>
-    <ul>
-        <li>
-            <a href="http://localhost:3000/?host=https://github.com">http://localhost:3000/?host=https://github.com</a>
-        </li>
-        <li>
-            <a href="http://localhost:3000/?host=https://wix.com">http://localhost:3000/?host=https://wix.com</a>
-        </li>
-        <li>
-            <a href="http://localhost:3000/?host=https://slack.com">http://localhost:3000/?host=https://slack.com</a>
-        </li>
-        <li>
-            <a href="http://localhost:3000/?host=https://medium.com">http://localhost:3000/?host=https://medium.com</a>
-        </li>
-    </ul>
+    <h1>It works!!!</h1>
 </body>
 </html>
